[gd_scene load_steps=2 format=3 uid="uid://rbgacr7it4d5"]

[ext_resource type="Script" path="res://scripts/user_interface/generic_ui/main_actions_ui/main_actions_ui.gd" id="1_k1a2d"]

[node name="MainActionsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k1a2d")
ui_name = "main_actions_ui"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -150.0
offset_right = 125.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64
alignment = 1

[node name="CadastrarPensamentoButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cadastro de Pensamento"

[node name="ListarPensamentoButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Listagem de Pensamentos"

[connection signal="pressed" from="VBoxContainer/CadastrarPensamentoButton" to="." method="_on_cadastrar_pensamento_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ListarPensamentoButton" to="." method="_on_listar_pensamento_button_pressed"]
